Textures applied wrong after reopening saved blender file (eevee rendered and lookdev mode) #68719

Closed
opened 2019-08-16 10:05:35 +02:00 by Denis Belov · 5 comments

System Information
Operating system: Win 7x64
Graphics card: GTX 1070

Blender Version
Broken: blender-2.81.0-git.9dab57a9f829-windows64
Worked: blender-2.81.0-git.b3c3c835609e-windows64

Short description of error
After reopening saved blender file textures applied wrong (last material in stack applied to everything) untill enter in object edit mode

Exact steps for others to reproduce the error
Apply two material with different textures to object
Turn on solid mode vieport shading
Save and reopen file
Turn on lookdev or rendered vieport shading

bug.blend

tex.png

**System Information** Operating system: Win 7x64 Graphics card: GTX 1070 **Blender Version** Broken: blender-2.81.0-git.9dab57a9f829-windows64 Worked: blender-2.81.0-git.b3c3c835609e-windows64 **Short description of error** After reopening saved blender file textures applied wrong (last material in stack applied to everything) untill enter in object edit mode **Exact steps for others to reproduce the error** Apply two material with different textures to object Turn on solid mode vieport shading Save and reopen file Turn on lookdev or rendered vieport shading [bug.blend](https://archive.blender.org/developer/F7667010/bug.blend) ![tex.png](https://archive.blender.org/developer/F7667011/tex.png)
Author

Added subscriber: @DenisBelov

Added subscriber: @DenisBelov

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-08-19 13:30:11 +02:00

Confirmed with the attached file.
If I enter edit mode the textures are corrected.
@fclem, any idea what might be going on?

Confirmed with the attached file. If I enter edit mode the textures are corrected. @fclem, any idea what might be going on?

This issue was referenced by 3cbf246239

This issue was referenced by 3cbf2462391c4adecd5be0bcd3e9654d494d9ed2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68719
No description provided.